# app/Http/Controllers/Api/AuthController.php
@@ -3,9 +3,88 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Validation\Rules\Password;
 
-class AuthController extends ApiBaseController
+class AuthController extends Controller
 {
-    //
+    public function register(Request $request)
+    {
+        try {
+            $validateUser = Validator::make($request->all(),
+            [
+                'name' => 'required',
+                'email' => 'required|email|unique:users,email',
+                'password' => ['required', Password::min(8)->letters()->symbols()->mixedCase() ]
+            ]);
+            if($validateUser->fails()){
+                return response()->json([
+                    'success' => false,
+                    'message' => 'validation error',
+                    'data' => $validateUser->errors()
+                ], 401);
+            }
+
+            $user = User::create([
+                'name' => $request->name,
+                'email' => $request->email,
+                'password' => Hash::make($request->password)
+            ]);
+            $user->token = $user->createToken("DESAFIO KEY")->plainTextToken;
+            return response()->json([
+                'success' => true,
+                'message' => 'User Created Successfully',
+                'data' => $user,
+            ], 200);
+
+        } catch (\Throwable $th) {
+            return response()->json([
+                'success' => false,
+                'message' => $th->getMessage()
+            ], 500);
+        }
+    }
+
+    public function login(Request $request)
+    {
+        try {
+            $validateUser = Validator::make($request->all(),
+            [
+                'email' => 'required|email',
+                'password' => 'required'
+            ]);
+
+            if($validateUser->fails()){
+                return response()->json([
+                    'success' => false,
+                    'message' => 'validation error',
+                    'data' => $validateUser->errors()
+                ], 401);
+            }
+
+            if(!Auth::attempt($request->only(['email', 'password']))){
+                return response()->json([
+                    'success' => false,
+                    'message' => 'Email & Password does not match with our record.',
+                ], 401);
+            }
+
+            $user = User::where('email', $request->email)->first();
+            return response()->json([
+                'success' => true,
+                'message' => 'User Logged In Successfully',
+                'data' => ['token' => $user->createToken("DESAFIO KEY")->plainTextToken],
+            ], 200);
+
+        } catch (\Throwable $th) {
+            return response()->json([
+                'success' => false,
+                'message' => $th->getMessage()
+            ], 500);
+        }
+    }
 }
